# irc2torrent

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  irc.defaults.toml  options.toml
.github/workflows/: rust.yml
src/: auth.rs  command_processor.rs  config.rs  irc_processor.rs  lib.rs  main.rs  pub_sub.rs  torrent_processor.rs
src/clients/: flood.rs  mod.rs  rtorrent.rs
