[[irc2torrent]]
name = "irc2torrent"
version = "0.1.0"
authors = ["Emre Besirik"]

[package]
name = "irc2torrent"
description = "IRC bot that downloads torrents from IRC"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle.irc2torrent]
name = "irc2torrent"
version = "0.1.0"
authors = ["Emre Besirik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
openssl-sys = { version = "0.9.93", features = ["vendored"] }
irc = "0.15.0"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
failure = "0.1.8"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json"] }
base64 = "0.21.4"
dxr = "0.5.0"
anyhow = "1.0.75"
toml = "0.8.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
directories = "5.0.1"
syslog = "6.1.0"
log = "0.4.20"
lava_torrent = "0.11.1"
async-trait = { version = "0.1.73", features = [] }
pub-sub = "*"