[package]
name = "irc2torrent"
description = "IRC bot that downloads torrents from IRC"
version = "0.1.0"
edition = "2021"
authors = ["Emre Besirik"]

[package.metadata.bundle.irc2torrent]
name = "irc2torrent"
version = "0.1.0"
authors = ["Emre Besirik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies]
openssl = { version = "0.10.59", features = ["vendored"] }
openssl-sys = { version = "0.9.95", features = ["vendored"] }
irc = "0.15.0"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full", "test-util"] }
failure = "0.1.8"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
reqwest_cookie_store = "0.6.0"
base64 = "0.22.0"
dxr_client = { path = "dxr/dxr_client", features = ["reqwest", "multicall", "native-tls"] }
dxr = { path = "dxr/dxr" }
anyhow = "1.0.80"
toml = "0.8.10"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
directories = "5.0.1"
syslog = "6.1.0"
simplelog = "^0.12.0"
log = "0.4.20"
lava_torrent = "0.11.1"
async-trait = { version = "0.1.77", features = [] }
pub-sub = "*"
tokio-scgi = "0.2.4"
chrono = "0.4.34"
clap = "4.5.2"
