[package]
name = "irc2torrent"
description = "IRC bot that downloads torrents from IRC"
version = "0.1.59"
edition = "2021"
license = "MIT"
documentation = "none yet"
homepage = "https://github.com/ebesirik/irc2torrent"
repository = "https://github.com/ebesirik/irc2torrent"
authors = ["Emre Besirik"]

[package.metadata.bundle.irc2torrent]
name = "irc2torrent"
version = "0.1.0"
authors = ["Emre Besirik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dev-dependencies]
cargo-release = "0.25.7"

[dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }
irc = "1.0.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full", "test-util"] }
failure = "0.1.8"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest_cookie_store = "0.9.0"
base64 = "0.22.1"
dxr_client = { path = "dxr/dxr_client", features = ["reqwest", "multicall", "native-tls"] }
dxr = { path = "dxr/dxr" }
anyhow = "1.0.86"
toml = "0.9.5"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
directories = "6.0.0"
syslog = "7.0.0"
simplelog = { version = "^0.12.2" , features = ["test"] }
log = "0.4.21"
lava_torrent = "0.11.1"
async-trait = { version = "0.1.77", features = [] }
pub-sub = "*"
tokio-scgi = "0.2.4"
chrono = "0.4.38"
clap = "4.5.2"
notify = "6.1.1"
